<resources>
    <string name="app_name">DESAFIO - Web Services</string>
    <string name="tvName">Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="btnRegister">SAVE</string>
    <string name="tvTitle">Welcome to the Marvel HQ\'s</string>
    <string name="tvRemember">Remember</string>
    <string name="tvCAccount">Create Account</string>
    <string name="btnLogin">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPubliComic">Published:</string>
    <string name="tvPriceComic">Price:</string>
    <string name="tvPagesComic">Pages:</string>
</resources>