<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/backlogin">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_marginTop="186dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/background_layout_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTitle"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:layout_marginTop="35dp"
            android:paddingLeft="17dp"
            android:paddingRight="12dp"
            android:background="@drawable/background_layout_white"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:textColorHint="@color/toolbar">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/etRegister"
                    android:hint="@string/tvEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textRegister" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/white"
                android:textColorHint="@color/toolbar">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/etRegister"
                    android:hint="@string/tvPassword"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textRegister"/>
            </com.google.android.material.textfield.TextInputLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/iconCheck"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/ic_check_box"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tvRemember"
                    android:text="@string/tvRemember"
                    android:textSize="18sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:text="@string/btnLogin"
                android:background="@color/toolbar"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tvCAccount"
                android:textColor="@color/CorCAccount"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>