<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/backlogin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/white"
        tools:layout_editor_absoluteX="0dp" />


    <include
        android:id="@+id/include"
        layout="@layout/layout_inicial"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="171dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="171dp"
        android:layout_marginRight="24dp"
        android:paddingLeft="15dp"
        android:paddingRight="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:background="@color/white"
            android:textColorHint="@color/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/etRegister"
                android:hint="@string/tvName"
                android:inputType="textPersonName"
                android:textColor="@color/textRegister"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@color/white"
            android:textColorHint="@color/toolbar">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/etRegister"
                android:hint="@string/tvEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/textRegister" />
         </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@color/white"
            android:textColorHint="@color/toolbar">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/etRegister"
                android:hint="@string/tvPassword"
                android:inputType="textEmailAddress"
                android:textColor="@color/textRegister"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:text="@string/btnRegister"
            android:textSize="21sp"
            android:background="@color/toolbar"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_img_cadastro"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/ic_add" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>