<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ComicDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backlogin">

        <ImageView
            android:id="@+id/ivComic2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivComic1"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivComic2"
            app:layout_constraintVertical_bias="0.235" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00EA2427"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/ic_back"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:padding="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivComic1"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleComic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TITLE"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvDescComic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descriçao"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvPubliComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPubliComic"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="7dp"/>
                <TextView
                    android:id="@+id/tvDatePubliComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="April 30, 2014"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvPriceComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPriceComic"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="7dp"/>
                <TextView
                    android:id="@+id/tvValuePriceComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="$5,99"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                        android:id="@+id/tvPagesComic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPagesComic"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginRight="7dp"/>
                    <TextView
                        android:id="@+id/tvQtdPagesComic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="38"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>